@@ -1,18 +1,13 @@
 # frozen_string_literal: true
 
+autoload :Set, 'set'
+autoload :StringIO, 'stringio'
+autoload :Tempfile, 'tempfile'
+require 'time' unless defined? Time.parse
 require_relative 'pdf/version'
 require 'asciidoctor'
 require 'prawn'
-# NOTE: patch float precision constant so prawn-table does not fail to arrange cells that span columns (see #1835)
-Prawn.send :remove_const, :FLOAT_PRECISION
-Prawn::FLOAT_PRECISION = 1e-3
 require 'prawn/templates'
-begin
-  require 'prawn/gmagick'
-rescue LoadError # rubocop:disable Lint/SuppressedException
-end unless defined? GMagick::Image
-autoload :Set, 'set'
-require 'time' unless defined? Time.parse
 require_relative 'pdf/measurements'
 require_relative 'pdf/sanitizer'
 require_relative 'pdf/text_transformer'
